# coardas

./: .gitignore  README.md  pyproject.toml  setup.cfg
coardas/: ingest.py
coardas/cgls/: accessor.py  product.py  translator.py
coardas/objects/: CGLS_ResampleTool.py  timeslicing.py
coardas/test/test_objects/: test_timeslicing.py
development/vscode/: launch.json  settings.json
development/vscode/.devcontainer/: DockerDevStage.template  devcontainer.json  docker-compose.development.yml
docker/: Dockerfile
