[metadata]
name = coardas
version = 0.1.0
url = https://www.arc.int
description = COpernicus Analysis Ready Data ASsimilation 
long_description = file: README.md
classifiers =
    Programming Language :: Python :: 3
    Private :: Do Not Upload

[options]
packages = find:
install_requires =
    numpy
    gdal
    tqdm
    xarray
    rasterio
    click
    requests

[options.package_data]
* = *.config

[tool:pytest]
addopts = --disable-socket

[options.extras_require]
dev =
    isort==5.10.1
    black==22.3.0
    flake8==4.0.1
    coverage
    pytest
    pytest-cov
    pytest-mock
    pytest-socket
    pre-commit

[flake8]
extend-ignore=E203,E722
max-line-length=120
per-file-ignores=
    __init__.py:F403 F401
    coardas/products/products.py:E501

